--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -13,8 +13,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: ChangeDir
-      run: cd compre
+    - name: Chdir
+      run: cd ./compre
     - name: Build
       run: cargo build --verbose
     - name: Run tests
