--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -15,6 +15,8 @@ jobs:
     - uses: actions/checkout@v2
     - name: Chdir
       run: cd ./compre
+    - name: List current directory
+      run: ls
     - name: Build
       run: cargo build --verbose
     - name: Run tests
