--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Chdir
-      run: cd ./compre
+      run: cd ./compre/compre
     - name: List current directory
       run: ls
     - name: Build
